// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chat > Snapshot test for chat message from assistant 1`] = `
<div
  className="bg-gray-100"
  style={
    {
      "overflowWrap": "anywhere",
    }
  }
>
  <div
    className=" m-auto flex md:gap-6 md:py-6 xl:max-w-2xl"
  >
    <div
      className="text-right font-bold "
    >
      <span
        className="awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229"
        style={{}}
      >
        <svg
          aria-hidden="true"
          focusable="false"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="stroke-linejoin-round stroke-linecap-round"
            d="M2 12.286h5.143L8.857 14l1.714-1.714H14V2H2v10.286z"
          />
          <path
            className="stroke-linecap-round"
            d="M4.99 7H5v.01h-.01zM7.99 7H8v.01h-.01zM10.99 7H11v.01h-.01z"
          />
        </svg>
      </span>
    </div>
    <div
      className="prose mt-[-2px] w-full"
    >
      <div
        className="flex "
      >
        <div
          className="flex-1"
        >
          <div
            className="prose dark:prose-invert flex-1"
          >
            <p>
              hello
            </p>
          </div>
        </div>
        <div
          className="copy-button-div md:-mr-8"
        >
          <div
            className="copy-button-div-nested"
          >
            <button
              className="awsui_button_vjswe_15u39_105 awsui_variant-icon_vjswe_15u39_199 awsui_button-no-text_vjswe_15u39_1085"
              data-analytics-funnel-value="button:r0:"
              data-testid="copy-msg-button"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              <span
                className="awsui_icon_vjswe_15u39_1111 awsui_icon-left_vjswe_15u39_1111 awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229"
                style={{}}
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    className="stroke-linejoin-round"
                    d="M2 5h9v9H2z"
                  />
                  <path
                    className="stroke-linejoin-round"
                    d="M5 5V2h9v9h-3"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chat > Snapshot test for chat message from user 1`] = `
<div
  className=""
  style={
    {
      "overflowWrap": "anywhere",
    }
  }
>
  <div
    className=" m-auto flex md:gap-6 md:py-6 xl:max-w-2xl"
  >
    <div
      className="prose mt-[-2px] w-full"
    >
      <div
        className="w-full"
      >
        <p>
          hello
        </p>
      </div>
    </div>
    <div
      className="min-w-[40px] text-right"
    >
      <span
        className="awsui_icon_h11ix_ayzd6_101 awsui_size-normal-mapped-height_h11ix_ayzd6_157 awsui_size-normal_h11ix_ayzd6_153 awsui_variant-normal_h11ix_ayzd6_229"
        style={{}}
      >
        <svg
          aria-hidden="true"
          focusable="false"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="stroke-linejoin-round"
            d="M4.61 4.39C4.61 2.52 6.13 1 8 1s3.39 1.52 3.39 3.39S9.87 7.78 8 7.78 4.61 6.26 4.61 4.39M2.05 14.08h11.91c0-2.25-1.17-4.23-2.9-5.3A5.77 5.77 0 0 0 8 7.91c-3.29 0-5.95 2.76-5.95 6.17z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
